refactor. 네이밍 컨벤션 정리 완료 및 인터페이스 전부삭제 (추후 재생성 예정)